[gd_scene load_steps=23 format=2]

[ext_resource path="res://Karakter/diam1.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Karakter/lompat1.png" type="Texture" id=3]
[ext_resource path="res://background game.png" type="Texture" id=4]
[ext_resource path="res://Karakter/lompat3.png" type="Texture" id=5]
[ext_resource path="res://Revisi/diam dan jalan main karakter terbaru.png" type="Texture" id=6]
[ext_resource path="res://215033_taira-komori_katana1 (online-audio-converter.com).wav" type="AudioStream" id=7]
[ext_resource path="res://Karakter/lompat2.png" type="Texture" id=8]
[ext_resource path="res://Karakter/serang1.png" type="Texture" id=11]
[ext_resource path="res://Karakter/serang3.png" type="Texture" id=12]
[ext_resource path="res://Karakter/serang2.png" type="Texture" id=13]
[ext_resource path="res://Karakter/putih.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 1500, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 1800, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 2100, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 1 ), null ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "diam",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "lompat",
"speed": 3.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "jalan",
"speed": 6.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 15 ), null, ExtResource( 15 ), ExtResource( 15 ) ],
"loop": true,
"name": "kenahit",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jatuh ",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "serang",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 162.319, 88.437 )
z_index = 1
script = ExtResource( 2 )
hp = 100

[node name="KenaHit" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KenaHit"]
position = Vector2( 0, 2.995 )
scale = Vector2( 0.771, 0.586 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.925171, -11.0692 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 10 )
animation = "diam"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.995 )
scale = Vector2( 0.771, 0.586 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 25, 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -100000
limit_top = -100000
limit_right = 100000
limit_bottom = 100000
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background game" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 185.851, 89.3524 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 4 )

[node name="Audio Effect" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio Effect"]
position = Vector2( 162.319, 88.437 )
stream = ExtResource( 7 )
max_distance = 40000.0
[connection signal="area_entered" from="KenaHit" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
